gcc/testsuite/rust/link/crate_import_0.rs
extern crate crate_import_1;
use crate_import_1::Foo;

impl Foo { } // error

fn main() { }